# pumper

./: .gitattributes  .gitignore  Cargo.toml  ONBOARDING.md  README.md  config.toml
.claude/: CLAUDE.md  settings.json
.perfect/Perfect/: Perfect.md  config.md
.perfect/Perfect/contexts/: broad-crawler.md  declarative-extraction-engine.md  fetch-engines.md  http-api-routes.md  job-worker-cron-scheduler.md  tiered-fetcher-politeness.md  us-grant-opportunities.md  us-trades-wages-tax-valuation.md
.perfect/Perfect/directions/: api-pagination-errors.md  api-streaming-bounded.md  browser-cheap-renders.md  browser-resilience.md  crawl-honest-errors.md  crawl-incremental-recrawl.md  crawl-live-progress.md  crawl-memory-bounds.md  crawl-pages-dataset.md  cron-maturity.md  extract-from-stored-pages.md  extraction-quality-signal.md  fetch-no-cache-ttl.md  fetch-tier-verdicts.md  governor-hot-path.md  grants-lifecycle-honesty.md  grants-query-surface.md  grants-schema-enrichment.md  grants-searchable-alerts.md  host-profiles-api.md  http-request-controls.md  job-control-surface.md  job-failed-webhooks.md  markdown-tables-tonumber.md  openapi-spec.md  priority-aging.md  proxy-support.md  ruleset-preview-endpoint.md  session-vault.md  sse-resume-graceful-shutdown.md  structured-fetch-trace.md  stuck-job-reaper.md  trades-common-unified.md  trades-meter-research.md  trades-output-guards.md
.perfect/Perfect/sessions/: 2026-07-13.md
catalog/: README.md  connector-docs.json  data-sources.toml
crates/apps/ca-grants/: Cargo.toml
crates/apps/census-common/: Cargo.toml
crates/apps/census-density/: Cargo.toml
crates/apps/census-nonemp/: Cargo.toml
crates/apps/census-nonemp/src/: lib.rs
crates/apps/cms-fee-schedule/: Cargo.toml
crates/apps/connector-api-watch/: Cargo.toml
crates/apps/connector-api-watch/src/: lib.rs
crates/apps/crawl/: Cargo.toml
crates/apps/eu-sedia/: Cargo.toml
crates/apps/extractor/: Cargo.toml
crates/apps/grants-common/: Cargo.toml
crates/apps/grants-gov/: Cargo.toml
crates/apps/hackernews/: Cargo.toml
crates/apps/homewyse-pricing/: Cargo.toml
crates/apps/mpsv-ispv/: Cargo.toml
crates/apps/mpsv-vpm/: Cargo.toml
crates/apps/plugin/: Cargo.toml
crates/apps/readable/: Cargo.toml
crates/apps/research/: Cargo.toml
crates/apps/state-tax/: Cargo.toml
crates/apps/trade-wages/: Cargo.toml
crates/apps/trades-common/: Cargo.toml
crates/apps/valuation-multiples/: Cargo.toml
crates/apps/watch/: Cargo.toml
crates/core/: Cargo.toml
crates/core/migrations/: 0001_init.sql  0002_platform.sql  0003_orchestration.sql  0004_simhash.sql  0005_change_intelligence.sql  0006_watches.sql  0007_cost_ledger.sql  0008_job_budget.sql  0009_research_cache.sql  0010_webhook_deliveries.sql  0011_idempotency.sql  0012_schedule_overlap.sql  0013_saved_searches.sql  0014_triggers.sql  0015_tier_memory.sql  0016_host_profiles.sql  0017_job_heartbeat.sql  0018_schedule_cron_maturity.sql  0019_webhook_delivery_retry.sql
crates/core/src/: app.rs  cache.rs  catalog.rs  config.rs  costs.rs  crawl.rs  datasets.rs  engine.rs  error.rs  extract.rs  fetcher.rs  governor.rs  jitter.rs  job.rs  json_salvage.rs  lib.rs  lru.rs  markdown.rs  plugin.rs  search.rs  simhash.rs  storage.rs  tiers.rs
crates/core/tests/: cache.rs  datasets.rs  jobs.rs  tiers.rs  triggers.rs  webhook_deliveries.rs
crates/engine-browser/: Cargo.toml
crates/engine-browser/src/: lib.rs
crates/engine-browser/tests/: render.rs
crates/engine-claude/: Cargo.toml
crates/engine-claude/src/: lib.rs
crates/engine-http/: Cargo.toml
crates/engine-http/src/: lib.rs
crates/engine-http/tests/: profiles.rs
crates/engine-search/: Cargo.toml
crates/engine-search/src/: lib.rs
crates/engine-search/tests/: facets.rs  recency.rs
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: lib.rs
crates/engine-wasm/tests/: plugins.rs
crates/server/: Cargo.toml
crates/server/src/: events.rs  main.rs  progress.rs  registry.rs  routes.rs  scheduler.rs  state.rs  triggers.rs  webhook.rs  worker.rs
docs/features/: README.md  apps.md  crawling.md  datasets.md  events-webhooks.md  extraction.md  fetching.md  http-api.md  runtime.md  search.md  triggers.md
docs/harness/: harness-learnings.md
docs/harness/perf-feature-2026-07-16/: FIXES-MED-TAIL-1.md  FIXES-MED-TAIL-2.md  FIXES-MED-TAIL-3.md  FIXES-MED-TAIL-4.md  FIXES-MEDLOW-SWEEP.md  FIXES-RETENTION-BACKFILL.md  FIXES-SEARCH3-CRAWLBUG.md  FIXES-WAVE-1.md  FIXES-WAVE-2.md  FIXES-WAVE-3.md  FIXES-WAVE-4.md  FIXES-WAVE-C.md  FIXES-WAVE-F.md  FIXES-WAVE-G.md  FIXES-WAVE-H.md  FIXES-WAVE-I.md  FIXES-WAVE-J.md  INDEX.md  app-job-model.md  app-registry.md  broad-crawler.md  configuration-data-source-catalog.md  czech-labour-market-mpsv.md  dataset-store-change-detection.md  declarative-extraction-engine.md  engine-capability-traits.md  eu-regulatory-funding-watchers.md  extraction-crawl-api-watch.md  fetch-engines-http-browser-claude.md  full-text-search-index.md  http-api-routes.md  job-worker-cron-scheduler.md  live-events-webhooks.md  tiered-fetcher-politeness.md  us-grant-opportunities.md  us-trades-business-density-census.md  us-trades-wages-tax-valuation.md  wasm-plugin-sandbox.md  web-research-readable-content.md
docs/harness/refactor-bughunt-2026-07-14/: FIXES-WAVES-1-10.md  FIXES-WAVES-1-11.md  FIXES-WAVES-1-12.md  FIXES-WAVES-1-3.md  FIXES-WAVES-1-5.md  FIXES-WAVES-1-6.md  FIXES-WAVES-1-7.md  FIXES-WAVES-1-8.md  FIXES-WAVES-1-9.md  INDEX.md  app-job-model.md  app-registry.md  broad-crawler.md  configuration-data-source-catalog.md  czech-labour-market-mpsv.md  dataset-store-change-detection.md  declarative-extraction-engine.md  engine-capability-traits.md  eu-regulatory-funding-watchers.md  extraction-crawl-api-watch.md  fetch-engines.md  full-text-search-index.md  http-api-routes.md  job-worker-cron-scheduler.md  (+7 more)
plugins-src/busyloop/: Cargo.toml
plugins-src/busyloop/src/: lib.rs
plugins-src/title-extractor/: Cargo.toml
plugins-src/title-extractor/src/: lib.rs
scripts/docs/: check-doc-sync.mjs  feature-doc-map.json
(+33 files in other folders)
