[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/engine-http",
    "crates/engine-browser",
    "crates/engine-claude",
    "crates/server",
    "crates/apps/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# internal
pumper-core = { path = "crates/core" }
pumper-engine-http = { path = "crates/engine-http" }
pumper-engine-browser = { path = "crates/engine-browser" }
pumper-engine-claude = { path = "crates/engine-claude" }
app-hackernews = { path = "crates/apps/hackernews" }
app-research = { path = "crates/apps/research" }
app-readable = { path = "crates/apps/readable" }

# async runtime + web
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# scraping engines
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli"] }
scraper = "0.23"
ego-tree = "0.10"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"

# shared
async-trait = "0.1"
async-stream = "0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

[profile.release]
lto = "thin"
