[package]
name = "pumper-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
scraper.workspace = true
ego-tree.workspace = true
regex.workspace = true
rayon.workspace = true
simd-json.workspace = true
url.workspace = true
futures.workspace = true
sha2.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
