[package]
name = "pumper-engine-browser"
version.workspace = true
edition.workspace = true

[dependencies]
pumper-core.workspace = true
chromiumoxide.workspace = true
futures.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
pumper-core.workspace = true
