[package]
name = "pumper-engine-http"
version.workspace = true
edition.workspace = true

[dependencies]
pumper-core.workspace = true
reqwest.workspace = true
cookie_store.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
# Local cookie-setting server for the session-vault persistence test.
axum.workspace = true
