[package]
name = "pumper-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pumper"
path = "src/main.rs"

[dependencies]
pumper-core.workspace = true
pumper-engine-http.workspace = true
pumper-engine-browser.workspace = true
pumper-engine-claude.workspace = true
pumper-engine-wasm.workspace = true
pumper-engine-search.workspace = true
app-hackernews.workspace = true
app-research.workspace = true
app-readable.workspace = true
app-grants-gov.workspace = true
app-cms-fee-schedule.workspace = true
app-census-density.workspace = true
app-census-nonemp.workspace = true
app-homewyse-pricing.workspace = true
app-state-tax.workspace = true
app-valuation-multiples.workspace = true
app-trade-wages.workspace = true
app-ca-grants.workspace = true
app-eu-sedia.workspace = true
app-mpsv-vpm.workspace = true
app-mpsv-ispv.workspace = true
app-extractor.workspace = true
app-plugin.workspace = true
app-crawl.workspace = true

axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
cron.workspace = true
