# A deliberately runaway plugin, to demonstrate that the host's CPU-fuel budget
# traps it instead of hanging. Build with:
#   cargo build --release --target wasm32-unknown-unknown
# then copy target/wasm32-unknown-unknown/release/busyloop.wasm to data/plugins/
[package]
name = "busyloop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[workspace]
