# Example WASM plugin for Pumper. Build with:
#   cargo build --release --target wasm32-unknown-unknown
# then copy target/wasm32-unknown-unknown/release/title_extractor.wasm
# to data/plugins/title.wasm
[package]
name = "title-extractor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true

# Detach from the parent Pumper workspace (this targets wasm32, not the host).
[workspace]
