[package]
name = "app-connector-api-watch"
version.workspace = true
edition.workspace = true

[dependencies]
pumper-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
tracing.workspace = true
